@@ -1,5 +1,5 @@
 /*
-    Copyright 2002-2016, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2002-2017, Felspar Co Ltd. http://fost.3.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -29,7 +29,7 @@ string fostlib::coercer< string, double >::coerce( double f ) {
 }
 
 
-std::wstring fostlib::coercer<std::wstring, fostlib::utf::u8_view>::coerce(const utf::u8_view u8) {
+std::wstring fostlib::coercer<std::wstring, f5::u8view>::coerce(const f5::u8view u8) {
     // TODO: Don't use this type as a proxy for utf16 strings. We can have
     // a proper tagged string now.
     std::wstring res;
@@ -45,7 +45,7 @@ std::wstring fostlib::coercer<std::wstring, fostlib::utf::u8_view>::coerce(const
     return res;
 }
 std::wstring fostlib::coercer< std::wstring, string >::coerce( const string &s ) {
-    return fostlib::coerce<std::wstring>(utf::u8_view(s.c_str(), s.native_length()));
+    return fostlib::coerce<std::wstring>(f5::u8view(s.c_str(), s.native_length()));
 }
 string fostlib::coercer< string, std::wstring >::coerce( const std::wstring &s ) {
     // TODO: This doesn't UTF16 decode properly
