@@ -1,5 +1,8 @@
+2017-07-18  Kirit Saelensminde  <kirit@felspar.com>
+ Deprecate `fostlib::utf::u8_view` in favour of `f5::u8view`
+
 2017-07-17  Kirit Saelensminde  <kirit@felspar.com>
- Move `utf::u8_view` to f4-cord.
+ Move `utf::u8_view` to f5-cord.
 
 2017-07-16  Kirit Saelensminde  <kirit@felspar.com>
  Remove `array_view` and replace with `f5::array_view` from f5-cord.
